--- a/index.html
+++ b/index.html
@@ -172,16 +172,18 @@
             </div>
             <div class="card">
               <div class="box">
-                <img src="https://source.unsplash.com/720x600/?app-clone,websites,laptops" alt="">
-                <div class="text">Razorpay Clone</div>
-                <p>#Project Details:- Replicating the original website with responsive web design.</p>
+                <img src="https://source.unsplash.com/720x600/?food,cake,roti,pizza" alt="">
+                <div class="text">EATZY EASY</div>
+                <p>#Project Details:- A Food Delivery Application Built with React.js, Redux Toolkit and Swiggy's
+API.</p>
               </div>
             </div>
             <div class="card">
               <div class="box">
-                <img src="https://source.unsplash.com/720x600/?zero,game,lines" alt="">
-                <div class="text">Tic-Tac-Toe Game</div>
-                <p>#Project Details:- Implemented interactive gameplay with dynamic board updates.</p>
+                <img src="https://source.unsplash.com/720x600/?digits,passoword,lines" alt="">
+                <div class="text">Password Generator</div>
+                <p>#Project Details:- Create a secure and user-friendly password generator web application using
+HTML, CSS, and JavaScript.</p>
               </div>
             </div>
           </div>
