--- a/index.html
+++ b/index.html
@@ -165,14 +165,7 @@
             </div>
             <div class="card">
               <div class="box">
-                <img src="https://source.unsplash.com/720x600/?diary,portfolio" alt="">
-                <div class="text">Portfolio</div>
-                <p>#Project Details:- A dynamic compilation of my work, achievements and skills.</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="box">
-                <img src="https://source.unsplash.com/720x600/?food,cake,roti,pizza" alt="">
+                      <img src="https://source.unsplash.com/720x600/?food,cake,roti,pizza" alt="">
                 <div class="text">EATZY EASY</div>
                 <p>#Project Details:- A Food Delivery Application Built with React.js, Redux Toolkit and Swiggy's
 API.</p>
@@ -180,10 +173,16 @@ API.</p>
             </div>
             <div class="card">
               <div class="box">
+               <img src="https://source.unsplash.com/720x600/?diary,portfolio" alt="">
+                <div class="text">Portfolio</div>
+                <p>#Project Details:- A dynamic compilation of my work, achievements and skills.</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="box">
                 <img src="https://source.unsplash.com/720x600/?digits,passoword,lines" alt="">
                 <div class="text">Password Generator</div>
-                <p>#Project Details:- Create a secure and user-friendly password generator web application using
-HTML, CSS, and JavaScript.</p>
+                <p>#Project Details:- Create a secure and user-friendly password generator web application.</p>
               </div>
             </div>
           </div>
