--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="card">
               <div class="box">
-                      <img src="https://source.unsplash.com/720x600/?food,cake,roti,pizza" alt="">
+                      <img src="https://source.unsplash.com/720x600/?burger,food,cake,roti,pizza" alt="">
                 <div class="text">EATZY EASY</div>
                 <p>#Project Details:- A Food Delivery Application Built with React.js, Redux Toolkit and Swiggy's
 API.</p>
@@ -180,7 +180,7 @@ API.</p>
             </div>
             <div class="card">
               <div class="box">
-                <img src="https://source.unsplash.com/720x600/?digits,passoword,lines" alt="">
+                <img src="https://source.unsplash.com/720x600/?digits,alphabets,passoword" alt="">
                 <div class="text">Password Generator</div>
                 <p>#Project Details:- Create a secure and user-friendly password generator web application.</p>
               </div>
