--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>⁷
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Portfolio Landing Page</title>
@@ -58,7 +58,7 @@
               <div class="text">Why Hire Me</div>
               <p>I bring a unique blend of skills, passion, adaptability, a strong work ethic, and potential to contribute to your company's growth.</p>
 
-              <a href="https://drive.google.com/file/d/1AKiQ1qdes8ZJCY7b4meSd0e5JFsYX0CI/view?usp=drivesdk" target="blank">Download CV</a>
+              <a href="https://drive.google.com/file/d/1eYyFcgiLAI1K4GsGa1gEwB5xz0E7qjWx/view?usp=drivesdk" target="blank">Download CV</a>
             </div>
           </div>
         </div>
