--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
               <div class="text">PROJECT</div>
 
               <p>
+                 <li class="project">Eatzy Easy Food App (React.js, Redux Toolkit, Swiggy's API) </li>
                 <li class="project">Portfolio (HTML, CSS, JavaScript)</li>
                 <li class="project">Weather App (HTML, CSS, JavaScript)</li>
-                <li class="project">Razorpay Clone (HTML, Tailwind CSS)</li>
                 <li class="project">Tic-Tac-Toe Game (HTML, CSS, JavaScript)</li>
               </p>
 
