--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                  <li class="project">Eatzy Easy Food App (React.js, Redux Toolkit, Swiggy's API) </li>
                 <li class="project">Portfolio (HTML, CSS, JavaScript)</li>
                 <li class="project">Weather App (HTML, CSS, JavaScript)</li>
-                <li class="project">Tic-Tac-Toe Game (HTML, CSS, JavaScript)</li>
+                <li class="project">Password-Generator (HTML, CSS, JavaScript)</li>
               </p>
 
               <br>
            <div class="text">DEVELOPMENT SKILLS</div>
 
               <p>
-                I'm familiar & work on a daily basis with HTML, CSS, JavaScript, Tailwind CSS, React and other modern frameworks.
+                I'm familiar & work on a daily basis with HTML, CSS, JavaScript, Tailwind CSS, React.js and other modern frameworks/libraries.
               </p>
             </div>
             <div class="column right">
