--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
               </div>
               <div class="bars">
                 <div class="info">
-                  <span>Python</span>
+                  <span>React.js</span>
                   <span>70%</span>
                 </div>
-                <div class="line python"></div>
+                <div class="line react"></div>
               </div>
               <div class="bars">
                 <div class="info">
